_generated-config/2.2/config/quarkus-agroal-config-group-data-source-jdbc-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-agroal-config-group-data-source-jdbc-runtime-config_configuration]]link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.url]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.url[quarkus.datasource.jdbc.url]`

[.description]
--
The datasource URL
--|string 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.initial-size]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.initial-size[quarkus.datasource.jdbc.initial-size]`

[.description]
--
The initial size of the pool. Usually you will want to set the initial size to match at least the minimal size, but this is not enforced so to allow for architectures which prefer a lazy initialization of the connections on boot, while being able to sustain a minimal pool size after boot.
--|int 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.min-size]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.min-size[quarkus.datasource.jdbc.min-size]`

[.description]
--
The datasource pool minimum size
--|int 
|`0`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.max-size]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.max-size[quarkus.datasource.jdbc.max-size]`

[.description]
--
The datasource pool maximum size
--|int 
|`20`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.background-validation-interval]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.background-validation-interval[quarkus.datasource.jdbc.background-validation-interval]`

[.description]
--
The interval at which we validate idle connections in the background. 
 Set to `0` to disable background validation.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`2M`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.foreground-validation-interval]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.foreground-validation-interval[quarkus.datasource.jdbc.foreground-validation-interval]`

[.description]
--
Perform foreground validation on connections that have been idle for longer than the specified interval.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.acquisition-timeout]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.acquisition-timeout[quarkus.datasource.jdbc.acquisition-timeout]`

[.description]
--
The timeout before cancelling the acquisition of a new connection
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.leak-detection-interval]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.leak-detection-interval[quarkus.datasource.jdbc.leak-detection-interval]`

[.description]
--
The interval at which we check for connection leaks.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.idle-removal-interval]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.idle-removal-interval[quarkus.datasource.jdbc.idle-removal-interval]`

[.description]
--
The interval at which we try to remove idle connections.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.max-lifetime]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.max-lifetime[quarkus.datasource.jdbc.max-lifetime]`

[.description]
--
The max lifetime of a connection.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.transaction-isolation-level]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.transaction-isolation-level[quarkus.datasource.jdbc.transaction-isolation-level]`

[.description]
--
The transaction isolation level.
--|`undefined`, `none`, `read-uncommitted`, `read-committed`, `repeatable-read`, `serializable` 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.extended-leak-report]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.extended-leak-report[quarkus.datasource.jdbc.extended-leak-report]`

[.description]
--
Collect and display extra troubleshooting info on leaked connections.
--|boolean 
|`false`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.detect-statement-leaks]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.detect-statement-leaks[quarkus.datasource.jdbc.detect-statement-leaks]`

[.description]
--
When enabled Agroal will be able to produce a warning when a connection is returned to the pool without the application having closed all open statements. This is unrelated with tracking of open connections. Disable for peak performance, but only when there's high confidence that no leaks are happening.
--|boolean 
|`true`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.new-connection-sql]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.new-connection-sql[quarkus.datasource.jdbc.new-connection-sql]`

[.description]
--
Query executed when first using a connection.
--|string 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.validation-query-sql]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.validation-query-sql[quarkus.datasource.jdbc.validation-query-sql]`

[.description]
--
Query executed to validate a connection.
--|string 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.pooling-enabled]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.pooling-enabled[quarkus.datasource.jdbc.pooling-enabled]`

[.description]
--
Disable pooling to prevent reuse of Connections. Use this with when an external pool manages the life-cycle of Connections.
--|boolean 
|`true`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.transaction-requirement]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.transaction-requirement[quarkus.datasource.jdbc.transaction-requirement]`

[.description]
--
Require an active transaction when acquiring a connection. Recommended for production. WARNING: Some extensions acquire connections without holding a transaction for things like schema updates and schema validation. Setting this setting to STRICT may lead to failures in those cases.
--|`off`, `warn`, `strict` 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.additional-jdbc-properties-additional-jdbc-properties]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.jdbc.additional-jdbc-properties-additional-jdbc-properties[quarkus.datasource.jdbc.additional-jdbc-properties]`

[.description]
--
Other unspecified properties to be passed to the JDBC driver when creating new connections.
--|`Map<String,String>` 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.url]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.url[quarkus.datasource."datasource-name".jdbc.url]`

[.description]
--
The datasource URL
--|string 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.initial-size]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.initial-size[quarkus.datasource."datasource-name".jdbc.initial-size]`

[.description]
--
The initial size of the pool. Usually you will want to set the initial size to match at least the minimal size, but this is not enforced so to allow for architectures which prefer a lazy initialization of the connections on boot, while being able to sustain a minimal pool size after boot.
--|int 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.min-size]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.min-size[quarkus.datasource."datasource-name".jdbc.min-size]`

[.description]
--
The datasource pool minimum size
--|int 
|`0`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.max-size]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.max-size[quarkus.datasource."datasource-name".jdbc.max-size]`

[.description]
--
The datasource pool maximum size
--|int 
|`20`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.background-validation-interval]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.background-validation-interval[quarkus.datasource."datasource-name".jdbc.background-validation-interval]`

[.description]
--
The interval at which we validate idle connections in the background. 
 Set to `0` to disable background validation.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`2M`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.foreground-validation-interval]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.foreground-validation-interval[quarkus.datasource."datasource-name".jdbc.foreground-validation-interval]`

[.description]
--
Perform foreground validation on connections that have been idle for longer than the specified interval.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.acquisition-timeout]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.acquisition-timeout[quarkus.datasource."datasource-name".jdbc.acquisition-timeout]`

[.description]
--
The timeout before cancelling the acquisition of a new connection
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.leak-detection-interval]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.leak-detection-interval[quarkus.datasource."datasource-name".jdbc.leak-detection-interval]`

[.description]
--
The interval at which we check for connection leaks.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.idle-removal-interval]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.idle-removal-interval[quarkus.datasource."datasource-name".jdbc.idle-removal-interval]`

[.description]
--
The interval at which we try to remove idle connections.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.max-lifetime]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.max-lifetime[quarkus.datasource."datasource-name".jdbc.max-lifetime]`

[.description]
--
The max lifetime of a connection.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.transaction-isolation-level]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.transaction-isolation-level[quarkus.datasource."datasource-name".jdbc.transaction-isolation-level]`

[.description]
--
The transaction isolation level.
--|`undefined`, `none`, `read-uncommitted`, `read-committed`, `repeatable-read`, `serializable` 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.extended-leak-report]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.extended-leak-report[quarkus.datasource."datasource-name".jdbc.extended-leak-report]`

[.description]
--
Collect and display extra troubleshooting info on leaked connections.
--|boolean 
|`false`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.detect-statement-leaks]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.detect-statement-leaks[quarkus.datasource."datasource-name".jdbc.detect-statement-leaks]`

[.description]
--
When enabled Agroal will be able to produce a warning when a connection is returned to the pool without the application having closed all open statements. This is unrelated with tracking of open connections. Disable for peak performance, but only when there's high confidence that no leaks are happening.
--|boolean 
|`true`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.new-connection-sql]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.new-connection-sql[quarkus.datasource."datasource-name".jdbc.new-connection-sql]`

[.description]
--
Query executed when first using a connection.
--|string 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.validation-query-sql]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.validation-query-sql[quarkus.datasource."datasource-name".jdbc.validation-query-sql]`

[.description]
--
Query executed to validate a connection.
--|string 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.pooling-enabled]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.pooling-enabled[quarkus.datasource."datasource-name".jdbc.pooling-enabled]`

[.description]
--
Disable pooling to prevent reuse of Connections. Use this with when an external pool manages the life-cycle of Connections.
--|boolean 
|`true`


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.transaction-requirement]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.transaction-requirement[quarkus.datasource."datasource-name".jdbc.transaction-requirement]`

[.description]
--
Require an active transaction when acquiring a connection. Recommended for production. WARNING: Some extensions acquire connections without holding a transaction for things like schema updates and schema validation. Setting this setting to STRICT may lead to failures in those cases.
--|`off`, `warn`, `strict` 
|


a| [[quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.additional-jdbc-properties-additional-jdbc-properties]]`link:#quarkus-agroal-config-group-data-source-jdbc-runtime-config_quarkus.datasource.-datasource-name-.jdbc.additional-jdbc-properties-additional-jdbc-properties[quarkus.datasource."datasource-name".jdbc.additional-jdbc-properties]`

[.description]
--
Other unspecified properties to be passed to the JDBC driver when creating new connections.
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
